# seibox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test_config_error.yaml  test_config_validation.py  test_formatting.py  test_pii_debuggability.py
.github/workflows/: ci.yml  release.yml
case_studies/: pii_injection.md
configs/: categories.yaml  eval_pack_test.yaml  eval_pi_injection.yaml  models.yaml  profiles.yaml
docs/: authoring.md
golden/v1/: benign.jsonl  injection.jsonl  pii.jsonl
golden/v2/: labels.jsonl
packs/: README.md
packs/email_and_ni_basics/: pack.yaml  prompts.jsonl
policies/: pii_v1.yaml
scripts/: format.sh  regression_gate.py  release_local.sh  smoke_eval.py
seibox/: __init__.py  __main__.py
seibox/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  vllm.py
seibox/datasets/: dsl.py
seibox/mitigations/: __init__.py
seibox/packs/: __init__.py  loader.py
seibox/runners/: __init__.py  ablate_runner.py  batch.py  eval_runner.py  matrix.py  release_runner.py
seibox/scoring/: __init__.py  aggregate.py  benign.py  calibration.py  golden.py  injection.py  pii.py
seibox/tools/: __init__.py  export_review.py  import_review.py
seibox/ui/: __init__.py  dashboard.py  drilldown.py  labeler.py  landscape_report.py  make_drilldowns.py  release_report.py  report.py
seibox/utils/: __init__.py  cache.py  config_validation.py  cost.py  data_bundle.py  doctor.py  io.py  policy.py  prompt_spec.py  (+5 more)
tests/: __init__.py  test_mitigations.py  test_profiles.py  test_prompt_dsl.py  test_scoring.py
(+15 files in other folders)
